# design-paterns

1.SingleResponsibilityPrinciple/bad_example/: main.cpp
1.SingleResponsibilityPrinciple/good_example/: main.cpp
10.Adapter/1.AdapterImplementation/: CMakeLists.txt  main.cpp
10.Adapter/2.CodingExercise/: CMakeLists.txt  main.cpp
11.Bridge/1.PimplIdiom/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
11.Bridge/2.ShrinkWrappedPimpl/: CMakeLists.txt  Foo.cpp  Foo.h  Pimpl.cpp  Pimpl.h  main.cpp
11.Bridge/3.BridgeImplementation/: CMakeLists.txt  main.cpp
11.Bridge/4.CodingExercise/: CMakeLists.txt  main.cpp
2.OpenClosedPrinciple/bad_example/: CMakeLists.txt  main.cpp
2.OpenClosedPrinciple/good_example/: CMakeLists.txt  main.cpp
3.LiskovSubstitionPrinciple/bad_example/: main.cpp
3.LiskovSubstitionPrinciple/good_example/: CMakeLists.txt  main.cpp
4.InterfaceSegregationPrinciple/bad_example/: main.cpp
4.InterfaceSegregationPrinciple/good_example/: main.cpp
5.DependencyInversionPrinciple/bad_example/: main.cpp
5.DependencyInversionPrinciple/good_example/: main.cpp
6.Builder/1.LifeWithoutBuilders/: CMakeLists.txt  main.cpp
6.Builder/2.Builder/: CMakeLists.txt  main.cpp
6.Builder/3.FluentBuilder/: CMakeLists.txt  HtmlBuilder.cpp  HtmlBuilder.h  HtmlElement.cpp  HtmlElement.h  main.cpp
6.Builder/4.GroovyStyleBuilder/: CMakeLists.txt  main.cpp
6.Builder/5.BuilderFacets/: CMakeLists.txt  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  main.cpp
6.Builder/6.BuilderCodingExcercise/: CMakeLists.txt  main.cpp
7.Factories/1.PointExample/: CMakeLists.txt  main.cpp
7.Factories/2.FactoryMethod/: CMakeLists.txt  main.cpp
7.Factories/3.Factory/: CMakeLists.txt  main.cpp
8.Prototype/4.PrototypeViaSerialization/: CMakeLists.txt  main.cpp
9.Singleton/2.TestabilityIssues/: CMakeLists.txt  capitals.txt  main.cpp
9.Singleton/3.SingletonInDependencyInjection/: CMakeLists.txt  main.cpp
(+31 files in other folders)
